plugins {
	alias(gradlePluginLibs.plugins.versions.update)
}

allprojects {
	apply plugin: 'base'
	repositories {
		mavenCentral()
	}
}

subprojects {

	tasks.withType(JavaCompile) {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
	}
}
